[package]
name = "rocket_prometheus"
description = """
Prometheus instrumentation for Rocket applications.
"""
version = "0.10.0-rc.1"
authors = ["Ben Sully <ben@bsull.io>"]
repository = "https://github.com/sd2k/rocket_prometheus"
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["rocket", "prometheus", "instrumentation", "monitoring"]
readme = "README.md"

[dependencies]
prometheus = { version = "0.13", default-features = false }
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "8cae077ba1d54b92cdef3e171a730b819d5eeb8e" }

[dev-dependencies]
once_cell = "1.2.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "8cae077ba1d54b92cdef3e171a730b819d5eeb8e", default-features = false, features=["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }

[badges]
maintenance = { status = "passively-maintained" }
